--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 08-13-04: Loading unindexed item in database caused crash. [AlexKreuz]
- 08-13-04: Scriptlist clearing in database caused crash. [AlexKreuz]
- 08-13-04: Bad weiss.ini Option_PVP setting caused crash. [AlexKreuz]
- 08-13-04: Starting Fusion on used ports caused crash. [AlexKreuz]
- 08-13-04: Damage on sacrifice without protected target caused crash. [AlexKreuz]
- 08-13-04: Undefined pet data caused crash. [AlexKreuz]
- 08-13-04: Map block access in SendCLeave caused crash. Added error-handling. [AlexKreuz]
- 08-13-04: Undefined map/maplist in PVP rank calculations caused crash. [AlexKreuz]
- 08-13-04: Magic Crusher skill with too high exp caused crash. [AlexKreuz]
- 08-13-04: Several skills (NB/SS/BOLT/ETC) with too high exp caused crash. [AlexKreuz]
- 08-13-04: Undefined map in PVP rank calculations caused crash. [AlexKreuz]
- 08-12-04: Bad list handling in monster skills caused crash. [AlexKreuz]
- 08-12-04: Integer overflow in guild calculations due to too high xp rate crashed server. [AlexKreuz]
- 08-12-04: Freeing scriptlist on close form crashed server. Added error-handling. [AlexKreuz]
- 08-12-04: Database load with character on missing map crashed server. [AlexKreuz]
- 08-11-04: I.S.C.S: Non ISCS user, on disconnect, crashed server. [AlexKreuz]
- 08-11-04: I.S.C.S: Removed -ISCSON/-ISCSOFF. Added ISCS menu item. [AlexKreuz]
- 08-11-04: I.S.C.S: Numerous stability fixes. [AlexKreuz]
- 08-10-04: R.E.E.D: Character deletion did not remove physical data. [AlexKreuz]
- 08-10-04: Bug #12: R.E.E.D character deletion caused server crash. [AlexKreuz]
- 08-10-04: I.S.C.S: Inter-Server Communication System Implemented. [AlexKreuz]
- 08-09-04: Removed unused USES and fixed a linux compile error. [Tsusai]